force-app/main/default/objects/Billing_Center_Global_Setting__c/Billing_Center_Global_Setting__c.object-meta.xml
<CustomObject>
    <description>Stores org or customer-level Billing Control Center configuration.</description>
    <label>Billing Center Global Setting</label>
    <nameField>
        <displayFormat>BCSET-{00000}</displayFormat>
        <label>Billing Center Global Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Center Global Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>