force-app/main/default/objects/Billing_Center_Global_Setting__c/fields/Disable_Order_Diary_Sync_Automation__c.field-meta.xml
<CustomField>
    <fullName>Disable_Order_Diary_Sync_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables Service Appointment, Work Order, and Opportunity Work Order order diary sync automation.</description>
    <label>Disable Order Diary Sync Automation</label>
    <type>Checkbox</type>
</CustomField>