force-app/main/default/objects/Billing_Center_Global_Setting__c/fields/Disable_Work_Order_Ledger_Automation__c.field-meta.xml
<CustomField>
    <fullName>Disable_Work_Order_Ledger_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables Work Order, Service Appointment, and Opportunity Work Order ledger automation.</description>
    <label>Disable Work Order Ledger Automation</label>
    <type>Checkbox</type>
</CustomField>