force-app/main/default/objects/Billing_Center_Global_Setting__c/fields/Enable_Config_Driven_Filters__c.field-meta.xml
<CustomField>
    <fullName>Enable_Config_Driven_Filters__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Config Driven Filters</label>
    <type>Checkbox</type>
</CustomField>