force-app/main/default/objects/Billing_Center_Global_Setting__c/fields/Enable_Debug_Mode__c.field-meta.xml
<CustomField>
    <fullName>Enable_Debug_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Debug Mode</label>
    <type>Checkbox</type>
</CustomField>