force-app/main/default/objects/Billing_Center_Global_Setting__c/fields/Enable_KPI_Comparison__c.field-meta.xml
<CustomField>
    <fullName>Enable_KPI_Comparison__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable KPI Comparison</label>
    <type>Checkbox</type>
</CustomField>