force-app/main/default/objects/Billing_Center_Global_Setting__c/fields/Enable_Retrospective_Logging__c.field-meta.xml
<CustomField>
    <fullName>Enable_Retrospective_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Retrospective Logging</label>
    <type>Checkbox</type>
</CustomField>