force-app/main/default/objects/Billing_Center_Global_Setting__c/fields/Max_Query_Row_Limit__c.field-meta.xml
<CustomField>
    <fullName>Max_Query_Row_Limit__c</fullName>
    <label>Max Query Row Limit</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>